[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "freakble"
version = "0.5.1"
description = "A simple tool to send messages into FreakWAN over Bluetooth low energy."
authors = ["Daniele Tricoli <eriol@mornie.org>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/eriol/freakble"
packages = [{include = "freakble", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
ble-serial = "^2.7.0"
prompt-toolkit = "^3.0.36"
asyncclick = "^8.1.3.4"
anyio = "^3.6.2"

[tool.poetry.scripts]
freakble = "freakble.__main__:run"

[tool.poetry.extras]
themes = ["ttkthemes"]

[tool.poetry.group.extras.dependencies]
ttkthemes = {version = "0.5.1", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
