[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "freakble"
version = "0.6.2"
description = "A simple tool to send messages into FreakWAN over Bluetooth low energy."
authors = ["Daniele Tricoli <eriol@mornie.org>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/eriol/freakble"
packages = [{include = "freakble", from = "src"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Communications",
]

[tool.poetry.dependencies]
python = "^3.8"
bleak = "^0.19.5"
prompt-toolkit = "^3.0.36"
asyncclick = "^8.1.3.4"
anyio = "^3.6.2"
ttkthemes = {version = "^3.2.2", optional = true}

[tool.poetry.scripts]
freakble = "freakble.__main__:run"

[tool.poetry.extras]
themes = ["ttkthemes"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
